fixed logout routhing issue in admin dashboard

--- a/E-Comm/Views/Shared/_AdminLayout.cshtml
+++ b/E-Comm/Views/Shared/_AdminLayout.cshtml
@@ -29,9 +29,13 @@
                             <i class="fas fa-home me-2"></i>View Store
                         </a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="@Url.Action("Logout", "Auth")">
-                            <i class="fas fa-sign-out-alt me-2"></i>Logout
-                        </a></li>
+                        <li>
+                            <form asp-controller="Auth" asp-action="Logout" method="post" class="d-inline">
+                                <button type="submit" class="dropdown-item text-danger">
+                                    <i class="fas fa-sign-out-alt me-2"></i>Logout
+                                </button>
+                            </form>
+                        </li>
                     </ul>
                 </div>
             </div>
